# mlir-softmax-backend

./: .gitattributes  .gitignore  .mailmap  CMakeLists.txt  PRIVACY_REMOVAL_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_elementwise.py  pass_static_analysis.cpp  profile_one.py  softmax_benchmark.cpp  softmax_gpu_bench.py  triton_softmax.py
build_old_cache/: CMakeCache.txt
build_pre_milestone2/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_pre_milestone2/Testing/Temporary/: CTestCostData.txt
build_pre_milestone2/lib/: CTestTestfile.cmake  cmake_install.cmake
build_pre_milestone2/lib/Passes/: CTestTestfile.cmake  cmake_install.cmake
build_pre_milestone2/test/: CTestTestfile.cmake  cmake_install.cmake  div_to_reciprocal_mul.out.mlir
build_pre_milestone2/tools/: CTestTestfile.cmake  cmake_install.cmake
build_pre_milestone2/tools/mlc-bench/: CTestTestfile.cmake  cmake_install.cmake
build_pre_milestone2/tools/mlc-opt/: CTestTestfile.cmake  cmake_install.cmake
compiler/: __init__.py  compiler.py  fusion.py  fx_parser.py
compiler/pipeline/: LoweringPipeline.cpp  LoweringPipeline.h
docs/: ARCHITECTURE.md  pipeline.md  results.csv  results.json  results.md
docs/profiling/: make_roofline.py  roofline.md  softmax_naive_f32_4k.ncu-rep  softmax_nsys.md  softmax_online_f16_4k.ncu-rep  softmax_online_f32_4k.ncu-rep  softmax_online_f32_4k.txt  softmax_online_ncu.md  softmax_sweep_nsys.nsys-rep  softmax_triton_f32_4k.ncu-rep
examples/: run_mlp_elementwise.py  softmax.mlir  softmax_rowwise.mlir
experiments/: __init__.py
experiments/fx_nvrtc/: __init__.py  cache.py  codegen_cuda.py  compiler.py  ir.py  nvrtc_driver.py
include/mlc/: Passes.h
kernels/: CMakeLists.txt  softmax_loader.py  softmax_online.cu  softmax_online.h
lib/Passes/: CMakeLists.txt  DivToReciprocalMulPass.cpp
runtime/: CMakeLists.txt  CudaRuntime.cpp  CudaRuntime.h  __init__.py  cache.py  launcher.py
scripts/: verify_wsl_gpu.sh
test/: CMakeLists.txt  run_filecheck.cmake
test/FileCheck/: div_to_reciprocal_mul.mlir  div_to_reciprocal_mul_2d.mlir
tests/: conftest.py  test_benchmark_shapes.sh  test_broadcast_cuda.py  test_codegen.py  test_correctness_cuda.py  test_fx_and_codegen_cpu.py  test_gpu_runtime_bench.sh  test_online_softmax.py  test_pipeline_end_to_end.sh  test_smoke.py  test_softmax_gpu_correctness.cpp
tools/: CMakeLists.txt
tools/mlc-bench/: CMakeLists.txt  mlc-bench.cpp
tools/mlc-demo/: CMakeLists.txt  mlc-demo.cpp
tools/mlc-driver/: CMakeLists.txt  mlc-driver.cpp
tools/mlc-gpu-bench/: CMakeLists.txt  mlc-gpu-bench.cpp
tools/mlc-opt/: CMakeLists.txt  mlc-opt.cpp
