[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-ml-compiler"
version = "0.1.0"
description = "Mini ML compiler for fused elementwise PyTorch FX graphs using NVRTC"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools]
packages = ["compiler", "runtime"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
