[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-ml-compiler"
version = "0.1.0"
description = "MLIR softmax backend with LLVM-to-PTX lowering and CUDA Driver verification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "numpy>=1.26",
  "pytest>=7.4",
]

[tool.setuptools]
packages = ["compiler", "runtime"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
