[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlir-softmax-backend"
version = "0.1.0"
description = "MLIR softmax backend with LLVM-to-PTX lowering, CUDA Driver verification, and GPU softmax baselines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "numpy>=1.26",
  "pytest>=7.4",
]
# Optional Triton baseline for the GPU runtime benchmark. Triton 3.x requires
# a CUDA-capable environment; on CPU-only hosts, install without this extra
# and `softmax_gpu_bench` will skip the Triton column.
triton = [
  "triton>=3.0; platform_system == 'Linux'",
]

[tool.setuptools]
packages = ["experiments", "experiments.fx_nvrtc", "kernels", "benchmarks"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
